fixes mobile moenu overlap

--- a/app/components/Navigation.module.css
+++ b/app/components/Navigation.module.css
@@ -374,3 +374,7 @@
     opacity: 1;
   }
 }
+
+[style*="overflow: hidden"] .brand {
+  z-index: 999;
+}
